--- a/src/css/main-page.css
+++ b/src/css/main-page.css
@@ -78,6 +78,7 @@
   max-width: 500px;
   filter: drop-shadow(0px 5px 5px #ffd579);
   transform: translateY(125px) !important;
+  max-height: 80vh;
 }
 @media (max-width: 1200px) {
   .greetings-text h1 {
